<resources>
    <string name="app_name">Mio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Nombres</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Restablecer la contraseña</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Olvidaste tu contraseña?</string>
    <string name="forgot_password_msg">Solo necesitamos tu Email registrado para enviarle instrucciones de restablecimiento de contraseña.</string>
    <string name="email_id">Email ID</string>
    <string name="formulario_de_registro">Formulario de Registro</string>
    <string name="contrasena">Contraseña</string>
    <string name="identificacion">Identificacion</string>
    <string name="nombres_y_apellidos">Nombres y Apellidos</string>
    <string name="direccion">Direccion</string>
    <string name="numero_tarjeta">Numero tarjeta</string>
    <string name="hint_identificacion">Número de Identificación</string>
    <string name="hint_tipoid">Tipo de Identificación</string>
    <string name="hint_tiposolicitud">Tipo de Solicitud</string>
    <string name="hint_descripcion">Descripción:</string>
    <string name="enviar_success">Enviado</string>
    <string name="name_validation_msg">Debe escribir el nombre</string>
    <string name="apellidos_validation_msg">Debe escribir el apellido</string>
    <string name="arrova_validation_msg">Valor @ requerido</string>
    <string name="email_validation_msg">Debe escribir un correo </string>
    <string name="identificacion_validation_msg">Debe escribir el número de identificación</string>
    <string name="formulario_pqrsdf">Formulario para instaurar un PQRSF</string>

    <string-array name="tipos_documentos">
        <item>Tipo de Documento</item>
        <item>Cédula de ciudadanía</item>
        <item>Pasaporte</item>
        <item>Cédula Extranjera</item>
    </string-array>
    <string name="title_activity_puntos_recarga">Puntos De Recarga</string>

</resources>
