<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.aunar.mio.PQRSDFActivity">



        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/formulario_pqrsdf"
                    android:textSize="26dp"
                    android:textAlignment="center"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:hint="@string/hint_name"
                        android:textColor="#3F51B5" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/input_apellidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_apellidos"
                        android:textColor="#3F51B5" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">
                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="#3F51B5" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tip_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_tipoid"
                    android:textSize="16dp" />

                <Spinner
                    android:id="@+id/spinner_tipodoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ></Spinner>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_identificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/input_identificacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_identificacion"
                        android:inputType="number"
                        android:textColor="#3F51B5" />

                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/tip_solicitud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_tiposolicitud"
                    android:textSize="15dp"
                    android:layout_marginTop="20dp"/>

                <Spinner
                    android:id="@+id/spinner_tippqrsf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></Spinner>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/descripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_descripcion"
                        android:inputType="textEmailAddress"
                        android:textColor="#3F51B5" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/enviar"
                    android:text="Enviar"
                    android:textColor="@color/white"
                    android:background="@color/dark_blue"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Design.FloatingActionButton"/>

            </LinearLayout>
        </ScrollView>


</android.support.constraint.ConstraintLayout>
