<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:layout_marginTop="60dp"
                android:text="@string/lbl_forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/forgot_password_msg"
                android:textColor="@android:color/black"
                android:textSize="16dp" />



            <android.support.design.widget.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:drawableEnd="@drawable/ic_menu_user"
                    android:drawableRight="@drawable/ic_menu_user"
                    />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_reset_password"
                android:text="@string/btn_reset_password"
                android:textColor="@color/white"
                android:background="@color/dark_blue"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                style="@style/Widget.Design.FloatingActionButton"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
