<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:background="@color/gray"
        android:visibility="gone"
        android:layout_centerInParent="true" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimary">
                <ImageView
                    android:src="@drawable/ic_login_user"
                    android:layout_marginTop="45dp"
                    android:layout_gravity="center"
                    android:layout_width="115dp"
                    android:layout_height="115dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:drawableEnd="@drawable/ic_menu_user"
                        android:drawableRight="@drawable/ic_menu_user"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contrasena"
                        android:drawableEnd="@drawable/ic_menu_pass"
                        android:drawableRight="@drawable/ic_menu_pass"
                        />

                </android.support.design.widget.TextInputLayout>



                <Button
                    android:id="@+id/btn_login"
                    android:text="LOGIN"
                    android:textColor="@color/white"
                    android:background="@color/dark_blue"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Design.FloatingActionButton"/>


                <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="280dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:text="@string/btn_forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/gray" />

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:background="@null"
                    android:text="Registrastrate"
                    android:textAllCaps="false"
                    android:textColor="@color/gray"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>